homework/kube/httpserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: httpserver
          image: caoweida2004/httpserver:V1.1
          ports:
            - containerPort: 8090
          readinessProbe:
            httpGet:
              path: "/healthz"
              port: 8090
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 2
          resources:
            limits:
               cpu: 10m
               memory: 128Mi
            requests:
               cpu: 5m
               memory: 64Mi
