homework/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service
spec:
  ports:
  - port: 80
    targetPort: 8090
  selector:
    app: httpserver
